Use service_type as parameter instead of type which is a keyword
